# ChangeLog for dev-java/hawtjni-runtime
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/hawtjni-runtime/ChangeLog,v 1.2 2014/01/08 19:43:53 tomwij Exp $

  08 Jan 2014; Tom Wijsman <TomWij@gentoo.org> hawtjni-runtime-1.8.ebuild:
  Remanifest for bug #497354, reported by John (EBo) David. Changed Copyright
  year to 2014 to let commit go through.

*hawtjni-runtime-1.8 (04 Jun 2013)

  04 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +hawtjni-runtime-1.8.ebuild,
  +metadata.xml:
  New ebuild for hawtjni-runtime; dependency of jansi-native, jline, jruby.