@@ -1,18 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST hawtjni-project-1.8.tar.gz 1601493 SHA256 b0422c0388a93bd4cfc9051eccb3cf03e4a5b8064a009d57c20a43480bd9288d SHA512 a3a1ea727663dce457e1b53dc3d0330c04193df281e58433dc4703ddcb6b42d42d09c7c67cd5f40f9e67528531a1026b30625f0ca4c3051d0134b14e0c3fec5f WHIRLPOOL 8e6716f38389007d718dadc5f3d3b07524ec332b25ae930af67784d4506405d0bddb8a1b275d421c41adc87585a6f0633df5900127e1500ab08dfa33e15922f1
-EBUILD hawtjni-runtime-1.8.ebuild 897 SHA256 4a51e54a3cb2c490d422b6b25fb7f9d49f2644af9f91cfb95d4b97dffc84e09b SHA512 7cc90248597990852778260909023ba66880eb0e71039eadfec70eb68b47f7acd50405e62437d0a37da954ce7832aec928923c99a1b879bbdb0429e3c3ddc202 WHIRLPOOL c4a6d136c5332ce2d8095d1930339f6291296d9e1f44f647ac7aaea34e9341b1ffc313a9cb3882ac411b716025d7f437a387f42dadd83f2a5824f7671e2439b3
-MISC ChangeLog 621 SHA256 58062d543aa5e2ce48c34b038c5578bdac0875f1af76655879d70b14b0c850cd SHA512 ffb39fa21dd2fd242c7f0d790cd543d91543d9211f223659287e42ed4a92f6ea77dbca33a3370664f8679abf77b7a2007a14c6d899b978d1018de46722dd23ea WHIRLPOOL 8324c3010718ba2606041cbfc2bfda6566a244aca132b4311ca9c9cfea8e228ad858547e0b9fd1099f05fce09e30e201887f552d270de6252ec59816aa23cf16
+DIST hawtjni-project-1.10.tar.gz 1602839 SHA256 364c271819b7907e404dee939fc2a3f0f5ea860f2e81810d631f59467f006115 SHA512 3bd94d20bf2d8953c60753aa404077c96c93704c2bd5bebfb5fe790fc29e15d97f6172706f06cea13c4806b652405ccfef824cccf76ff018dafb7262ff845490 WHIRLPOOL 9d6a0fa421d5609d74c13ba39afc2bfd94174474557a0189a530a5c8e5bb9ab0fdf30199a2b3fd4b99c8a068a713357dc1223250182ab0b16fed61c4ee289d1e
+EBUILD hawtjni-runtime-1.10.ebuild 813 SHA256 0783cd7f9e23d3381029975579290da15110df5332aa6a895846211dd1f19cda SHA512 1971ec6ee2175aa54bd785416df936b9324418c7c57612fedc2b4954bc82f56a9d8002624d2f0b43c0ba4d60e0ac001ff8677ed6463d8e0d2263379e425edbc7 WHIRLPOOL 2b9fb8b721b7033773b3826da2572db8c5a1606b7324119553b5df1ce2c3e0a2072840b8a03160d2fc61f6595286bf055873b29904c8506c0dad4f84664c4c00
+MISC ChangeLog 825 SHA256 5119df69cd625fe314cb8d36ed30fd9487ad6f5aa7c4f1396db6b0615af5b30e SHA512 b97eace01ea493e553e45c5a9b9b13617462ce6d63e30d132499ed519ed56b51afb3bafcfe1988a5da3ec9c4b6d242c45178766cfc0f51ec3849f35db08089f5 WHIRLPOOL dbe46e7a76168f486a152f37f8d44823741e1f42abf68e795f138c049b32c7fa27a5cf80be155a5b8f8d943f9e866add47db9b30b4ee677be9375258f4ef4e6c
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJSzapSAAoJEJWyH81tNOV9gVIIAJCqj0FquNvgHWx0kRKgR4BE
-8wNeAwcbvmKGjc9T3SFsGVVmHNKExwh9jcYta8FmzkUKCDTO/Tn1QOglsvhOhJuL
-Ve2UaUeZUs4EBIXxDKROZEFwpvmbiIGUVnTzuPIWw9pFdyrwq54h9SThDKmYdCXb
-FHsK4eHA/o+jc+AkDbXHu/RJxAXhHf1YAMMuAkRE2MLa++sr1NAG/hkjEee7vX+w
-4Kp3Q58n44ZH8kwSDwFRsBCP3PQTQMHK1lpCzEqKLV/wCpf1U8uFbnPq3u4A9t5Z
-qBYk9/LSNCEwPGvr95ZeaW77Axm3WpsYXWPw0JxDyMTlwXe7I+XQxVbMMOhzxBY=
-=8xtC
+iQJ8BAEBCABmBQJVA3S7XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
+MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kgVwP/At8FRRXBBi8wEMHCwHpb3MW
+wI3mpaym6VRWcRTEXY3KDef/4nERgcpTuzpN7ACgJFlnX3pJercTdO5Eddut9QRr
+BuWFNwcvRYgCZ9RsX6ygGpypctYJQjBU/swm/3LuYbCpvdfMTJQf3afy6+b//nHa
+oKeYPRXlvNg5HIS/neoQSOuZR2s37oX0/n75cGb0xBaoE1WQuefrRcBd/CECFYBi
+tLJ2L/dmmNAhOhm2BsDAmAYEkkrSehzR7W6ZU8hvdwhgIblTeJCOVM/wVBRt2kNi
+IqUsxaWf702HcrPmi1uuLMmAZt1lq8fHT1FLAWfSiunhqZbvzH5+L7OE3TU4bNhi
+daCep5SKabSPKHaS6nG7iMSWfiSv3DYF+JLXUAN7RJLJqv3pAsMrbZfPgJ2Bug8u
+zpGlMyK7ve8YuhCbjdbu81K3/9GwJAp0NCeR0fcj3IFLouEwd/M8daMG+7AIHEnP
+Y/t+9mv367KDS8fNKDluXZzGlx9ps5G6EUWYy/KIGfIAg7s6lvrLPvtdqBgQdXTY
+4xr006IItkouL5eIHoogEfvBbGebVK2ZDAhx2abbaVLNr3BfU5bT8W3eNfjyd13C
+Ap8cJgjmdLjcZAckFg2Whu9HTUlO8oPDX8+LGwqylj7v923GNY65yKLpwPo9deh/
+/GIM9N5nYxjKAa4R//N7
+=NRJK
 -----END PGP SIGNATURE-----
