@@ -8,13 +8,13 @@ DIST logilab-common-0.62.1.tar.gz 199594 SHA256 02745f8416faabba65b5cb188f849ef4
 DIST logilab-common-0.63.2.tar.gz 196789 SHA256 603ba00c9bb09219a3bd2906c214d9455481110dacc472f450b53d5ae90f28e7 SHA512 e4b089387ab7d5d039ec719e736711f54af8d722be4ea0a933014375fe353045528c3c74c3feb6868aefe4a867223c483985fb1415aabe25dba1d333d1afbdb9 WHIRLPOOL d937ebb1f20c2bb040552bf32afc767f4238c21cb995583f9f19404c9a22bec634889a684a9fecfb70b2a17803cd4df6507dc5a74b6ae9ee4d04759d724bb687
 EBUILD logilab-common-0.61.0.ebuild 3122 SHA256 d57373295ff823bdd27f0859930182a5ec1d06e165cc824f7c720bf819a3266c SHA512 2fcf03eadb3b7705d2c5cfb1d5e40a2609164504c06c028bfcd2ec0192ec051a2c6f33258b284fb38b113f86b188e608ca8af045fad863f24b9c089d58eb4d6f WHIRLPOOL 54e29b60984f626d324c3920af06124d4814e6dca3ff6c0bdde56c884d8cc076ba08cd7c10102b177337f8c094248afdd0defedc65424e816781c09e80e01311
 EBUILD logilab-common-0.62.1.ebuild 3344 SHA256 f6147ebcfcad371af844dd28bf668e3ad96bc4f1c889494a80867df198fd2d4b SHA512 31e40e72e1cced8398dfb4b7d0620ba03c194d5c42626d99d8d34119df96778881ff4274a9b3d7367dd08cdd88c97947c4942a9a83f2fc3100f0babbc84ed267 WHIRLPOOL 587bf2b15c25abd986f1ae143b215f1ccc8182a29287fcccc86982d60f519176bde18c18d11e9fd87ba44cd332f06b5bac9f298cf32fdde02100ee6c9b4d1947
-EBUILD logilab-common-0.63.2.ebuild 3245 SHA256 8921161f0b5d06dfa7b05c8c5fb4999a33c0d808e97283c9d910f9568d32611a SHA512 7e05ed97f94ccd0a5ae1f0c0b401a01e8f2c737cda3f9c5d145dbd6a628e1ab95a9385f95d0ef965d6197092c057083336e613e8d8fd6bbd68e95c6d8db4a53f WHIRLPOOL af9786e3ba6a21b44daf60b1517331c9246f1e23364ea9863ad33f25a8f802f1f17a0e1bfd01fb7deffb413db456bdce4b91d6c7bb98edab6036e030c2b2a1ac
-MISC ChangeLog 24928 SHA256 50f6c4db1693985a61011a9488965a6b4f4a1e184af0c30dd5f4c7dd37d094c9 SHA512 37c14e595e8886293cbdda79706d186dd316063bfb7cc8e81aa6e80d83cc32a5be0e63d17d83124de3e5f4186c859a6fb0ccad6eaf6309b3ff4d9dad66debe04 WHIRLPOOL 6536f008bde95e02f285784b4a3b5a12461ef92ce3983fa7b53974bc3aa68cbec758e1bfdeeedac3c67a4dc502705192b0ce5c2587e08dbfe0ffadcea44be0da
+EBUILD logilab-common-0.63.2.ebuild 3281 SHA256 5a7b2480b1b75ae57d979759c387e84a74d136baea96c783f0ac7de1fe0bd5a4 SHA512 a24d0ab88b66e86f18e6ab0561f7a2c006938ca00bdce21ae03d1e3b351eddbb5d62c90c3051b12d09af759aaaf22ee9470257c1b3b0b5f2e5a4d4e51c4c1b0d WHIRLPOOL 526fee2ff9c499b9b71731011f0e21c439f00bb5e72c6dc20c2020ef9f12f190a546cf954282db150e12660b628393b341424670a544a802241a63420b5d4891
+MISC ChangeLog 25037 SHA256 dec733ba2ffbc94711d593b90901b545af8c39caece60776a63c083adb80597b SHA512 52595ed5828cfe15ea8f8d009edb060ab61fa671eb433b99c7ae49330a5d617f8ce8620063f99af0ef14c77af6de0b8b24736e099fffab2ae098ec00f2df1235 WHIRLPOOL da3fce821e03af5101abd41a001e6760ffdf1b771dc13140aa131eae2b5e64999ceb63f14c333fc9c20c85b7243763ab708ae975bedda50a8e446a7ebe90e5eb
 MISC metadata.xml 237 SHA256 523ae42d51ae087b615a63e6b30e3c6c1d3910f2ccc0c03685d6939756660c16 SHA512 74f7a5fc9ffe80a474f05ed5ab7fe94511ea85f65325d3f16c5cb9af5b072b9aaab5ddf99464e34d12a47dd4861a76e16486fc8815a502036530ed74c73047db WHIRLPOOL d95ffbf06f4021d81c7b5f17bc1c240e47db7a3344526c053ae504d8442658d93ffc13d9f89e91991d6327fc92b31bd9499a9ec3f57830dd9834ca3b349b1e1f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUC4aAACgkQso7CE7gHKw1s5gCgzlUhLnVru2mYQV45fjnghTxe
-bEsAoIIRGqJ927iMMCa8Dsh0xxhE4cOi
-=ZNuE
+iEYEAREIAAYFAlUDd/AACgkQso7CE7gHKw2LfQCgv2sMEDVKN37jT8IveFUKCiji
+bhcAoJ916giTOrOb15NjwcPHvM2OYojX
+=5+6m
 -----END PGP SIGNATURE-----
