@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst prepare setup
+DEPEND=>=virtual/jdk-1.5 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+DESCRIPTION=A JNI code generator based on the generator used by the Eclipse SWT project
+EAPI=5
+HOMEPAGE=https://github.com/fusesource/hawtjni
+IUSE=elibc_FreeBSD doc source elibc_FreeBSD
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0
+RDEPEND=>=virtual/jre-1.5 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+SLOT=0
+SRC_URI=https://github.com/fusesource/hawtjni/archive/hawtjni-project-1.10.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	d7cef87260947d4cce245c4f026377e2	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=e69c8880f6dcd2b7ff8ef2e5042277d2
