@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST libgmail-0.1.11.tar.gz 30433 SHA256 2d94f1230f591dfa6d1b726338063f28b89b2f82ba5b866ab077c86c598de43e SHA512 a6e08ff1c2a50930289eb4b79ccffe458ef64bc01e4eb5db83a9e8155b349187808743e8152a3437a6db0a9cdc96b0a3ccd24b2d8edc44ef5ffdc707c98c3114 WHIRLPOOL bd79e1e5c8fb44e8c31b085dc1f602589521099ae630e289997a60cf7252769e6829bf38584654b08d515501becf2d6555a20cca5ae9730363283571d5848bcf
-EBUILD libgmail-0.1.11-r1.ebuild 717 SHA256 23bd28ba06d95ada5a2d09dd11a8bc077b7ed2c032777e8832ec975248ee4bce SHA512 101ec9915e9c3ed1b76fa8b3bf0aa28061248dc82cc53b0d905d5465cf4a426c6921e6755d1f9a41a7fe8079dfafb03ac755c3b45ece7e8861205ac254632519 WHIRLPOOL 0094c7368cd9c9c80eedc5e2bab4b0389072e33022ce9aea094c0f38ced5fbf976127cab7c8f3596ae8831f9e8bf0ee42e48eefd28b140ac8314cf7b8d439d0d
-MISC ChangeLog 3233 SHA256 7e7474990f7907afa3d04858953691800c13ebd667360ca68cf8e109e674761c SHA512 69f926387c225c6557a9f6e43b304782cc8bab4d887425151357bac24987b0043766a431628c07404f86a792aab55fa7c91b40ffe3460eb45925c3569dcf379d WHIRLPOOL 814cd1ef325de1bb4d73fec40fdc3f33347bd2494cbb5ee6fe70825697c520d5863d97d51447e60dd344a001b83e1a96dc2920693734da06b08d411f77f644c0
+EBUILD libgmail-0.1.11-r1.ebuild 720 SHA256 cce9dd624212bf715b95a6aab1f27107b599080417ae9c85dd24020368548bb0 SHA512 9399ec2928a2b243497bde26134cb56a4e73918a5415f91d00eb8e65ae5b4bfb196251068f28e9f59fada6e0697ee6e39ee9d97340cc5c932573ef08650e9cc8 WHIRLPOOL cb7a20b486db8029e891af319791b4634f50b16ce011f48f4b69051cdef73d4e85dc1f9b11898082d4d3dfce5390a8628288c7b6a92d050e3c7b4c372621706c
+MISC ChangeLog 3335 SHA256 a10e27899a852295c24cdfc21097ff29f999304fd14ea043dd642d42a4e045a9 SHA512 aae2b59c252ec3de355b9c6ddcd81b46756a70c3874bc9d0cfbd28b3db68f45602f29656eb43e345824a448187eb6f978aa5d302911f8076f8204b81b060704a WHIRLPOOL 77ca7ecbc73ffe433c0ac653ddd4bb5de00c921590068b57176fc198760029ba8303a2350bd630c835a70d225b50c376c73346d325ecafa4c2be5179439a7dcf
 MISC metadata.xml 160 SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f SHA512 2f1153c2abadf7a9f4133b1f9a379c67c6a2f24b4e226dc213f36ddd2f8d4fabcc893c094a586f8b53f7b652f4428a689eaf27899db6858767f7cdb984da17ef WHIRLPOOL a901e6830477c343d0f31f7aa0d46e867c4debc40e4db2c41df4a9b3c44a5879729a298f66b813836a47641d569738a5be5547e6d38bea11eb6a9f545db707ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT4cYsACgkQso7CE7gHKw1zpwCeK5FD3lSsjwMS6aKJONukDRUg
-NyAAoKoxEt6pgGebf2ljn6wkTtvkp3OH
-=rnXU
+iEYEAREIAAYFAlUDeU4ACgkQso7CE7gHKw0pUgCeP0GqBXdbz4zvlHXBx/xQquQm
+KOkAoKJ/2ARMCPZfppc5zn4tPBpZC0Yd
+=Dtig
 -----END PGP SIGNATURE-----
