@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/hawtjni-runtime
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/hawtjni-runtime/ChangeLog,v 1.2 2014/01/08 19:43:53 tomwij Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/hawtjni-runtime/ChangeLog,v 1.3 2015/03/13 23:37:24 chewi Exp $
+
+*hawtjni-runtime-1.10 (13 Mar 2015)
+
+  13 Mar 2015; James Le Cuirot <chewi@gentoo.org> +hawtjni-runtime-1.10.ebuild,
+  -hawtjni-runtime-1.8.ebuild:
+  Version bump. Closes bug #542466. Thanks to Arfrever.
 
   08 Jan 2014; Tom Wijsman <TomWij@gentoo.org> hawtjni-runtime-1.8.ebuild:
   Remanifest for bug #497354, reported by John (EBo) David. Changed Copyright
